removed horizontal scrollbar by fixing homepage desktop spacing

--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -35,5 +35,6 @@
   }
   @media only screen and (min-width: $mobileBreakpoint) {
     height: 100vh;
+    width: initial;
   }
 }
